Domestic abuse and safeguarding checks have drop downs
Check answers page also shows these responses

--- a/app/views/8/verification-report/check-answers.html
+++ b/app/views/8/verification-report/check-answers.html
@@ -244,6 +244,20 @@
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
+                    Domestic abuse checks verified by
+                  </dt>
+                  <dd class="govuk-summary-list__value">
+                    {{data['domestic-abuse-verification']}}
+                  </dd>
+                  <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" href="common-data">Change
+                      <span class="govuk-visually-hidden">Domestic abuse checks
+                        verified by</span>
+                    </a>
+                  </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                  <dt class="govuk-summary-list__key">
                     Safeguarding checks
                   </dt>
                   <dd class="govuk-summary-list__value">
@@ -257,14 +271,15 @@
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    How have you verified these checks?
+                    Safeguarding checks verified by
                   </dt>
                   <dd class="govuk-summary-list__value">
-                    {{data['check-verification']}}
+                    {{data['safeguarding-verification']}}
                   </dd>
                   <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="common-data">Change
-                      <span class="govuk-visually-hidden">Safeguarding checks</span>
+                      <span class="govuk-visually-hidden">safeguarding checks
+                        verified by</span>
                     </a>
                   </dd>
                 </div>
