Show suitability for unpaid work answers on check answers

--- a/app/views/8/verification-report/check-answers.html
+++ b/app/views/8/verification-report/check-answers.html
@@ -401,34 +401,6 @@
                 <dl class="govuk-summary-list">
                   <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                      Health conditions
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      {{data['verify-no-health-conditions']}}
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="unpaid-work">Change
-                        <span class="govuk-visually-hidden"> verify no health
-                          conditions</span>
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Health conditions verified by
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      {{data['how-verified-health-conditions']}}
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="unpaid-work">Change
-                        <span class="govuk-visually-hidden"> health conditions
-                          verified by</span>
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
                       Verify DWP involvement
                     </dt>
                     <dd class="govuk-summary-list__value">
@@ -445,7 +417,7 @@
                       DWP verified by
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      {{data['how-verified-dwp']}}
+                      {{data['benefits-verification']}}
                     </dd>
                     <dd class="govuk-summary-list__actions">
                       <a class="govuk-link" href="unpaid-work">Change
