--- a/app/views/8/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/8/verification-report/electronic-monitoring-for-curfew.html
@@ -44,7 +44,7 @@
               </li>
             {% endif %}
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="recommendation">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="suitability-decision">
                 Recommendation</a>
             </li>
             <li class="app-subnav__section-item">
