--- a/app/views/8/verification-report/suitability-decision-error.html
+++ b/app/views/8/verification-report/suitability-decision-error.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Recommendation" %}
+{% set pageName="Proposal" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -22,7 +22,7 @@
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential-information">
-                Essential  information</a>
+                Essential information</a>
             </li>
             <li class="app-subnav__section-item">
               {% if (data['verification-report-sections'] == 'Include sections for unpaid work only') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
@@ -43,7 +43,7 @@
               {% endif %}
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="recommendation">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="suitability-decision">
                 Recommendation</a>
             </li>
             <li class="app-subnav__section-item">
@@ -63,15 +63,45 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
+        <div class="govuk-error-summary" data-module="govuk-error-summary">
+          <div role="alert">
+            <h2 class="govuk-error-summary__title">
+              There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+              <ul class="govuk-list govuk-error-summary__list">
+                <li>
+                  <a href="#proposal">Change your recommendation or update the
+                    checks and consents.</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
         <form action="recommendation" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
           <h1 class="govuk-heading-l">
-            Suitability decision
+            Recommendation
           </h1>
-          <div class="govuk-form-group">
-            <p class="govuk-body-l">Based on the information you have from agency checks and the defendant interview, what is the defendant suitable for?</p>
+          <div class="govuk-form-group govuk-form-group--error">
+            <h2 class="govuk-label-wrapper" id="proposal">
+              <label class="govuk-label govuk-label--m" for="suitable-for">
+                What is the defendant suitable for?
+              </label>
+            </h2>
+            <p id="proposal-error" class="govuk-error-message"><span class="govuk-visually-hidden">
+              Error:</span> You can only select
+                electronic monitoring curfew if you answered:
+              <ul class="govuk-list govuk-list--bullet govuk-error-message">
+                <li><a href="essential-information">No concerns for domestic abuse</a></li>
+                <li><a href="essential-information">No concerns for child safeguarding</a></li>
+                <li><a href="electronic-monitoring-for-curfew">Yes to informed consent</a></li>
+              </ul>
+              <p class="govuk-body govuk-error-message">Change your
+                recommendation or update the checks and consent.</p>
+            </p>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="suitable-for" name="suitable-for" type="radio" value="Unpaid work only" {{ checked("suitable-for", "Unpaid work only") }}>
@@ -88,7 +118,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="suitable-for-3" name="suitable-for" type="radio" value="Both unpaid work and electronic monitoring" {{ checked("suitable-for", "Both unpaid work and electronic monitoring") }}>
                 <label class="govuk-label govuk-radios__label" for="suitable-for-3">
-                  Both unpaid work and electronic monitoring curfew
+                  Both unpaid and electronic monitoring curfew
                 </label>
               </div>
               <div class="govuk-radios__divider">or</div>
@@ -103,14 +133,9 @@
           <div class="govuk-form-group">
             <h2 class="govuk-label-wrapper">
               <label class="govuk-label govuk-label--m" for="proposal">
-                Explain your decision
+                Explain your recommendation
               </label>
             </h2>
-            <div id="suitability-explanation-hint" class="govuk-hint">
-              This will be included in the final report which is presented to the Magistrate.
-              <br>You should include the things you have taken into consideration in making your decision.
-              <br>Keep your explanation focussed on the checks you have done, and the things you found out at interview.
-            </div>
             <textarea class="govuk-textarea" id="suitability-explanation" name="suitability-explanation" rows="9" aria-describedby="suitability-explanation-hint">{{data['suitability-explanation']}}</textarea>
           </div>
           <div class="govuk-button-group">
