Recommendation becomes suitability decision

--- a/app/views/8/verification-report/suitability-decision.html
+++ b/app/views/8/verification-report/suitability-decision.html
@@ -44,7 +44,7 @@
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="suitability-decision">
-                Recommendation</a>
+                Suitability decision</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">
@@ -63,7 +63,7 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="recommendation" method="post" novalidate>
+        <form action="suitability-decision" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
