--- a/app/views/8/verification-report/essential-information.html
+++ b/app/views/8/verification-report/essential-information.html
@@ -57,7 +57,7 @@
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="suitability-decision">
-                Recommendation</a>
+                Suitability decision</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">
