--- a/app/views/8/verification-report/suitability-decision-error.html
+++ b/app/views/8/verification-report/suitability-decision-error.html
@@ -44,7 +44,7 @@
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="suitability-decision">
-                Recommendation</a>
+                Suitability decision</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">
@@ -78,7 +78,7 @@
             </div>
           </div>
         </div>
-        <form action="recommendation" method="post" novalidate>
+        <form action="suitability-decision-error" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
