Suitability decision answers on check answers page

--- a/app/views/8/verification-report/check-answers.html
+++ b/app/views/8/verification-report/check-answers.html
@@ -499,7 +499,7 @@
           {% endif %}
           <div class="govuk-summary-card">
             <div class="govuk-summary-card__title-wrapper">
-              <h2 class="govuk-summary-card__title">Proposal</h2>
+              <h2 class="govuk-summary-card__title">Suitability decision</h2>
             </div>
             <div class="govuk-summary-card__content">
               <dl class="govuk-summary-list">
@@ -526,7 +526,8 @@
                   </dd>
                   <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="offender-details">
-                      Change<span class="govuk-visually-hidden"> address</span>
+                      Change<span class="govuk-visually-hidden"> suitability
+                        explanation</span>
                     </a>
                   </dd>
                 </div>
