Update content for starts page

--- a/app/views/8/verification-report/start-page.html
+++ b/app/views/8/verification-report/start-page.html
@@ -9,10 +9,12 @@
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-l">Start page</h1>
           <div class="govuk-form-group">
-            <p class="govuk-body-l">A verification report is a new kind of
-              pre-sentence advice. This information will help you complete this
-              research task.</p>
             <h2 class="govuk-heading-m">What is a verification report?</h2>
+            <p class="govuk-body">A verification report is a new kind of
+              pre-sentence advice. It identifies people who are suitable for
+              electronic monitoring curfew, unpaid work sentences or both. By
+              letting low risk defendants be sentenced on the day, the report is
+              intended to reduce adjournments.</p>
             <p class="govuk-body">When someone meets the criteria for a
               verification report, you will:</p>
             <ul class="govuk-list govuk-list--bullet">
@@ -20,9 +22,10 @@
               <li>request child safeguarding checks from social services</li>
               <li>interview the defendant before their first hearing</li>
             </ul>
-            <p class="govuk-body">Using the information from the police checks
-              and interview, you can assess someone's suitability for either
-              electronic monitoring curfew, unpaid work or both.</p>
+            <p class="govuk-body">Using the information from the police,
+              children's services checks and interview, you can assess someone's
+              suitability for either electronic monitoring curfew, unpaid work
+              or both.</p>
             <p class="govuk-body">You can deliver this information to the court
               in a defendant's plea hearing. The court will not need to adjourn
               for a pre-sentence report to be prepared.</p>
