--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,6 +9,14 @@
     <h1 class="govuk-heading-xl">
       {{ serviceName }}
     </h1>
+    <h2 class="govuk-heading-m">v9</h2>
+      <p><a class="govuk-link" href="/9/verification-report/index.html">Prototype</a></p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3515">
+            Increment to v9.</a></p>
+        </li>
+      </ul>
     <h2 class="govuk-heading-m">v8</h2>
       <p><a class="govuk-link" href="/8/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
@@ -18,7 +26,9 @@
         </li>
         <li>
           <p class="govuk-body"><a class="govuk-link" href="https://miro.com/app/board/uXjVM6w-eIM=/?moveToWidget=3458764567898360031&cot=14">
-            Changes to how we gather information for the verification report.</a></p>
+            Changes to how we gather information for the verification report.
+            Including moving to drop downs for how information has been verified
+            at an interview</a></p>
         </li>
       </ul>
     <h2 class="govuk-heading-m">v7</h2>
