:construction: report show defendant details and essential information

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -9,3 +9,9 @@
 @import "components/govuk-layout";
 @import "components/split-pane";
 @import "components/subnav";
+
+
+.not-known-on-form{
+ font-weight: bold !important;
+ color: red !important;
+}
