--- a/app/views/9/verification-report/download.html
+++ b/app/views/9/verification-report/download.html
@@ -286,35 +286,12 @@
             <h2 class="govuk-heading-m report-heading--purple">Suitability</h2>
           </caption>
           <tbody class="govuk-table__body">
-            {% if (data['verification-report-sections'] == 'Include sections for unpaid work only') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header not-known-on-form">Unpaid work</th>
-                <td class="govuk-table__cell not-known-on-form">
-                  <p class="govuk-body-s not-known-on-form">The defendant has been assesed as suitable for
-                    a stand-alone requirement.</p>
-                  <p class="govuk-body-s not-known-on-form">Mr Armstrong tells me that he currently
-                    works full time Monday to Friday, this has been verified
-                    following production of his wage slip; he is fit and able to
-                    work and will be able to complete his unpaid work hours at
-                    weekends.</p>
-                  </td>
-              </tr>
-            {% endif %}
-            {% if (data['verification-report-sections'] == 'Include sections for electronic monitoring only') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header not-known-on-form">Electronic monitoring curfew</th>
-                <td class="govuk-table__cell">
-                  <p class="govuk-body-s not-known-on-form">The defendant has been assesed as not
-                    suitable for an electronically monitored curfew requirement.</p>
-                  <p class="govuk-body-s not-known-on-form">Mr Armstrong has previously been the
-                    subject of a community order for an offence involving domestic
-                    abuse. Whilst he has sucessfully completed that order, he
-                    currently resides with his partner and child and as such he is
-                    deemed unsuitable for an electronic curefew requirement.
-                    </p>
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header">{{data['suitable-for']}}</th>
+              <td class="govuk-table__cell">
+                <p class="govuk-body-s not-known-on-form">{{data['suitability-explanation']}}</p>
                 </td>
-              </tr>
-            {% endif %}
+            </tr>
           </tbody>
         </table>
       </div>
