:bug: Assessor name becomes assessor signature
Page title also reflects the header becoming, Sign your report

--- a/app/views/9/verification-report/sign-your-report.html
+++ b/app/views/9/verification-report/sign-your-report.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Assessor details" %}
+{% set pageName="Sign your report" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -71,7 +71,7 @@
             <h1 class="govuk-heading-l">
               Sign your report
             </h1>
-            <input class="govuk-input govuk-input--width-20" id="assessor-name" name="assessor-name" type="assessor-name" value="{{data['assessor-name']}}">
+            <input class="govuk-input govuk-input--width-20" id="assessor-signature" name="assessor-signature" type="assessor-signature" value="{{data['assessor-signature']}}">
           </div>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
