:construction: Show signature on report doc
All prototype data that we capture and want to use is now on the report

--- a/app/views/9/verification-report/download.html
+++ b/app/views/9/verification-report/download.html
@@ -476,7 +476,7 @@
             </tr>
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Signature</th>
-              <td class="govuk-table__cell not-known-on-form" colspan="3">NE Body</td>
+              <td class="govuk-table__cell" colspan="3">{{data['assessor-signature']}}</td>
             </tr>
           </tbody>
         </table>
