--- a/app/views/9/verification-report/download.html
+++ b/app/views/9/verification-report/download.html
@@ -257,7 +257,7 @@
             </tr>
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Appearance date</th>
-              <td class="govuk-table__cell not-known-on-form">15/02/2023</td>
+              <td class="govuk-table__cell">15/02/2023</td>
             </tr>
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Offences</th>
@@ -270,10 +270,6 @@
                   {{data['offence-2-information']}}<br/>
                 {% endif %}
               </td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">Sentencing range</th>
-              <td class="govuk-table__cell not-known-on-form">Discharge - 3 months custody</td>
             </tr>
           </tbody>
         </table>
