Changes to verification section
- remove DPW involvement as we ask about benefits and health
  considerations
- health considerations updated to show that the service knows this
  information

--- a/app/views/9/verification-report/download.html
+++ b/app/views/9/verification-report/download.html
@@ -318,12 +318,6 @@
               <td class="govuk-table__cell not-known-on-form">15/02/2023</td>
             </tr>
             <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">DWP Involvement</th>
-              <td class="govuk-table__cell not-known-on-form">Not applicable</td>
-              <td class="govuk-table__cell not-known-on-form">Not applicable</td>
-              <td class="govuk-table__cell not-known-on-form">Not applicable</td>
-            </tr>
-            <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Benefits</th>
               <td class="govuk-table__cell">{{data['benefits-verification']}}</td>
               <td class="govuk-table__cell not-known-on-form">DATE</td>
@@ -340,7 +334,7 @@
             </tr>
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Health considerations</th>
-              <td class="govuk-table__cell not-known-on-form">{{data['health-conditions-verification']}}</td>
+              <td class="govuk-table__cell">{{data['health-conditions-verification']}}</td>
               <td class="govuk-table__cell not-known-on-form">16/02/2023</td>
             </tr>
             <tr class="govuk-table__row">
