Remove duplicate Suitability section

--- a/app/views/9/verification-report/download.html
+++ b/app/views/9/verification-report/download.html
@@ -334,7 +334,7 @@
             </tr>
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Health considerations</th>
-              <td class="govuk-table__cell">{{data['health-conditions-verification']}}</td>
+              <td class="govuk-ss">{{data['health-conditions-verification']}}</td>
               <td class="govuk-table__cell not-known-on-form">16/02/2023</td>
             </tr>
             <tr class="govuk-table__row">
@@ -360,29 +360,6 @@
                 <td class="govuk-table__cell not-known-on-form">DATE</td>
               </tr>
             {% endif %}
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
-        <table class="govuk-table">
-          <caption class="govuk-table__caption govuk-table__caption--m">
-            <h2 class="govuk-heading-m report-heading--purple">Suitability</h2>
-          </caption>
-          <tbody class="govuk-table__body">
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">Supporting comments</th>
-              <td class="govuk-table__cell">
-                <p class="govuk-body-s not-known-on-form">Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit.</p>
-                <p class="govuk-body-s not-known-on-form">Phasellus diam neque, suscipit a
-                  mauris non, sagittis placerat arcu. Duis faucibus posuere
-                  est. Curabitur non nunc orci.</p>
-                <p class="govuk-body-s not-known-on-form">Donec ac purus scelerisque, dapibus
-                  velit sit amet, hendrerit magna.</p>
-              </td>
-            </tr>
           </tbody>
         </table>
       </div>
